# HIK_websocket

websocket_server/: .gitignore  BAYER_FORMAT_GUIDE.md  CHANGELOG.md  CMakeLists.txt  CONNECTION_TROUBLESHOOTING.md  CROSSHAIR_GUIDE.md  PERFORMANCE_GUIDE.md  PLATFORM_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UBUNTU_GUIDE.md  build.bat  build.sh  camera_websocket_server.cpp  camera_websocket_server.hpp  example_crosshair.cpp  example_usage.cpp  install_opencv.sh  main.cpp  mobile_client.html  run_server.bat  run_server.sh  run_server_quiet.sh  setup_dependencies.bat  setup_dependencies.sh  test_camera.cpp  test_camera.sh  test_camera_fps.cpp  test_fps.sh  web_client.html
